--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "axios": "^0.27.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-inlinesvg": "^3.0.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^4.0.3",
     "styled-component": "^2.8.0",
@@ -47,5 +48,8 @@
   "bugs": {
     "url": "https://github.com/IdeMoraes/projeto14-bookstore-front/issues"
   },
-  "homepage": " "
+  "homepage": " ",
+  "devDependencies": {
+    "@svgr/webpack": "^6.2.1"
+  }
 }
